--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,7 @@ variables:
   ENABLE_ARMv7: 'true'
   ENABLE_ARMv6: 'true'
   DOCKERHUB_REPO_NAME: openvpn
+  DEBUG: 'true'
 
 include:
   - project: 'ix.ai/ci-templates'
